--- a/index.html
+++ b/index.html
@@ -168,10 +168,7 @@
                     <div class="about-right text-center">
                         <h1>Somos una Comunidad</h1>
                         <p>
-                            Conformada por estudiantes de la Universidad Nacional Mayor de San Marcos que buscan el
-                            beneficio común para la comunidad de programadores, el cual tiene como objetivo la
-                            incubación de proyectos innovadores además de la fijación de un área de competitividad y
-                            publicidad de proyectos.
+                            ALEX ESTUVO AQUI :P
                         </p>
                     </div>
                 </div>
